Fix contact on mobile

--- a/e-portfoolio/src/App.css
+++ b/e-portfoolio/src/App.css
@@ -185,7 +185,7 @@ a:visited {
   text-decoration-color: #edd434;
   text-decoration-thickness: 5%;
   text-underline-offset: 15%;
-  margin-bottom: 3%;
+  margin-bottom: 1.5rem;
 }
 
 .contact p {
@@ -195,7 +195,7 @@ a:visited {
 }
 
 .contact-info {
-  margin: 20px auto;
+  margin: 5px 0;
   width: 50%;
   justify-content: space-around;
   display: flex;
